{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 102,
  "lineage": "fe9555c2-2b1f-16b5-a38d-8799ba05b700",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "api-gateway-eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0243890f476c996eb",
            "domain": "vpc",
            "id": "eipalloc-07c3ef7336ef0e1cf",
            "instance": "i-0bdb00271e31c2665",
            "network_interface": "eni-0039a332b58817475",
            "private_dns": "ip-10-0-0-203.us-east-2.compute.internal",
            "private_ip": "10.0.0.203",
            "public_dns": "ec2-3-22-43-18.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.43.18",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_key_pair.microservice",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-http",
            "aws_security_group.allow-ssh",
            "aws_subnet.microservice-subnet-public",
            "aws_vpc.microservice",
            "module.api-gateway-codedeploy.aws_iam_instance_profile.ec2",
            "module.api-gateway-codedeploy.aws_iam_role.ec2",
            "module.api-gateway.aws_instance.default"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e01ce4ee18447327",
            "arn": "arn:aws:ec2:us-east-2:313918710939:instance/i-02eddce3d5eca1a23",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02eddce3d5eca1a23",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "microservices",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c7b58873a5fa7174",
            "private_dns": "ip-172-31-17-215.us-east-2.compute.internal",
            "private_ip": "172.31.17.215",
            "public_dns": "ec2-3-136-86-42.us-east-2.compute.amazonaws.com",
            "public_ip": "3.136.86.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0cb4237b5da5ee90b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-117f4a6b",
            "tags": {
              "Name": "Server"
            },
            "tenancy": "default"
          },
          "dependencies": [
            "aws_key_pair.microservice"
          ]
        }
      ]
    },
    {
      "module": "module.api-gateway",
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e01ce4ee18447327",
            "arn": "arn:aws:ec2:us-east-2:313918710939:instance/i-0bdb00271e31c2665",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "api-gateways-ec2",
            "id": "i-0bdb00271e31c2665",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "microservices",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0039a332b58817475",
            "private_dns": "ip-10-0-0-203.us-east-2.compute.internal",
            "private_ip": "10.0.0.203",
            "public_dns": "ec2-3-22-43-18.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.43.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01ef969443fc2f6b0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0078c5d94b1c5a0e9",
            "tags": {
              "Name": "api-gateways"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-006a19575f9894c75",
              "sg-066c198c971bb0bf1",
              "sg-093f70470ff44c28e"
            ]
          },
          "dependencies": [
            "aws_key_pair.microservice",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-http",
            "aws_security_group.allow-ssh",
            "aws_subnet.microservice-subnet-public",
            "aws_vpc.microservice",
            "module.api-gateway-codedeploy.aws_iam_instance_profile.ec2",
            "module.api-gateway-codedeploy.aws_iam_role.ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "microservice",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-09c966253706a06bc",
            "owner_id": "313918710939",
            "vpc_id": "vpc-080248809da8b33e4"
          },
          "dependencies": [
            "aws_vpc.microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "allow-outgoing-access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ce4d52f693626055",
            "owner_id": "313918710939",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09c966253706a06bc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table Allowing Outgoing Access"
            },
            "vpc_id": "vpc-080248809da8b33e4"
          },
          "dependencies": [
            "aws_internet_gateway.microservice",
            "aws_vpc.microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "microservice-subnet-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024c70100be256816",
            "route_table_id": "rtb-0ce4d52f693626055",
            "subnet_id": "subnet-025b68c37b7a521b2"
          },
          "dependencies": [
            "aws_internet_gateway.microservice",
            "aws_route_table.allow-outgoing-access",
            "aws_subnet.microservice-subnet-private-1",
            "aws_vpc.microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "microservice-subnet-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c60c5a04480783ff",
            "route_table_id": "rtb-0ce4d52f693626055",
            "subnet_id": "subnet-0078c5d94b1c5a0e9"
          },
          "dependencies": [
            "aws_internet_gateway.microservice",
            "aws_route_table.allow-outgoing-access",
            "aws_subnet.microservice-subnet-public",
            "aws_vpc.microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-all-outbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:313918710939:security-group/sg-066c198c971bb0bf1",
            "description": "Allow all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066c198c971bb0bf1",
            "ingress": [],
            "name": "allow-all-outbound",
            "name_prefix": null,
            "owner_id": "313918710939",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-080248809da8b33e4"
          },
          "dependencies": [
            "aws_vpc.microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:313918710939:security-group/sg-093f70470ff44c28e",
            "description": "Allow HTTP inbound traffic",
            "egress": [],
            "id": "sg-093f70470ff44c28e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-http",
            "name_prefix": null,
            "owner_id": "313918710939",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-080248809da8b33e4"
          },
          "dependencies": [
            "aws_vpc.microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-internal-http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:313918710939:security-group/sg-0302c758c191f9279",
            "description": "Allow internal HTTP requests",
            "egress": [],
            "id": "sg-0302c758c191f9279",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-internal-http",
            "name_prefix": null,
            "owner_id": "313918710939",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-080248809da8b33e4"
          },
          "dependencies": [
            "aws_vpc.microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:313918710939:security-group/sg-006a19575f9894c75",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-006a19575f9894c75",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": null,
            "owner_id": "313918710939",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-080248809da8b33e4"
          },
          "dependencies": [
            "aws_vpc.microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "microservice-subnet-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:313918710939:subnet/subnet-025b68c37b7a521b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-025b68c37b7a521b2",
            "map_public_ip_on_launch": false,
            "owner_id": "313918710939",
            "tags": {
              "Name": "Microservice Subnet (Private 1)"
            },
            "vpc_id": "vpc-080248809da8b33e4"
          },
          "dependencies": [
            "aws_vpc.microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "microservice-subnet-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:313918710939:subnet/subnet-045efed98641a82ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-045efed98641a82ab",
            "map_public_ip_on_launch": false,
            "owner_id": "313918710939",
            "tags": {
              "Name": "Microservice Subnet (Private 2)"
            },
            "vpc_id": "vpc-080248809da8b33e4"
          },
          "dependencies": [
            "aws_vpc.microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "microservice-subnet-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:313918710939:subnet/subnet-0078c5d94b1c5a0e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0078c5d94b1c5a0e9",
            "map_public_ip_on_launch": false,
            "owner_id": "313918710939",
            "tags": {
              "Name": "Microservice Subnet (Public)"
            },
            "vpc_id": "vpc-080248809da8b33e4"
          },
          "dependencies": [
            "aws_vpc.microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "microservice",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:313918710939:vpc/vpc-080248809da8b33e4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08117fc728c516a4b",
            "default_route_table_id": "rtb-0ec3fc90732c33521",
            "default_security_group_id": "sg-00e0f947032425cfb",
            "dhcp_options_id": "dopt-38d97053",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-080248809da8b33e4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ec3fc90732c33521",
            "owner_id": "313918710939",
            "tags": {
              "Name": "Microservice"
            }
          }
        }
      ]
    }
  ]
}